# ai-mind

./: .env.sample  .gitignore  README.md  pyproject.toml
aim/: config.py  constants.py
aim/agents/: __init__.py  persona.py
aim/app/cli/: __main__.py
aim/app/dream_agent/: __main__.py  client.py
aim/app/dream_watcher/: __main__.py
aim/app/mud/: __init__.py  __main__.py  adapter.py  config.py  conversation.py  mediator.py  session.py  strategy.py  worker.py
aim/chat/: app.py  manager.py
aim/chat/strategy/: base.py  simple.py  xmlmemory.py
aim/conversation/: embedding.py  index.py  loader.py  message.py  model.py
aim/dreamer/: __init__.py  api.py  context.py  executor.py  memory_dsl.py  models.py  scenario.py  scheduler.py  state.py  worker.py
aim/dreamer/dialogue/: __init__.py  models.py  scenario.py  strategy.py
aim/llm/: completion.py  llm.py  models.py
aim/nlp/: __init__.py  summarize.py
aim/pipeline/: analyst.py  base.py  daydream.py  journaler.py  philosopher.py  summarizer.py
aim/refiner/: __init__.py  __main__.py  context.py  engine.py  paradigm.py  paradigm_config.py  prompts.py  tools.py
aim/server/: serverapi.py
aim/server/session/: __main__.py  state.py  utils.py  workflow.py
aim/tool/: formatting.py  loader.py
aim/tool/impl/: __init__.py  base.py  memory.py  mud.py  pipeline.py  system.py  weather.py
aim/utils/: redis_cache.py  tokens.py  turns.py  xml.py
aim/watcher/: __init__.py  rules.py  stability.py  watcher.py
aim/worker/: consumer.py  producer.py
config/: models.yaml
config/paradigm/: brainstorm.yaml  critique.yaml  daydream.yaml  journaler.yaml  knowledge.yaml
config/persona/: Andi.json  Corroded.json  LinYu.json  Nova.json  Tiberius.json  Val.json  assistant.json  blip.json  pal.json
config/scenario/: analysis_dialogue.yaml  analyst.yaml  critique.yaml  critique_dialogue.yaml  daydream.yaml  daydream_dialogue.yaml  exploration_brainstorm.yaml  journaler.yaml  journaler_dialogue.yaml  philosopher.yaml  philosopher_dialogue.yaml  planner_deliberation.yaml  planner_form_building.yaml  researcher.yaml  researcher_dialogue.yaml  summarizer.yaml  test_simple.yaml
config/sources/: ai-mind.yaml
config/tools/: file.yaml  memory.yaml  mud.yaml  mud_agent.yaml  mud_phase1.yaml  mud_super.yaml  pipeline.yaml  plan.yaml  planner_form.yaml  refiner_brainstorm.yaml  refiner_daydream.yaml  refiner_knowledge.yaml  schedule.yaml  self_rag.yaml  system.yaml  weather.yaml  web.yaml
config/tools/auras/: bind_access.yaml  book_access.yaml  code_access.yaml  code_room.yaml  copy_access.yaml  git_repo.yaml  list_access.yaml  market_access.yaml  news_access.yaml  paper_write.yaml  print_access.yaml  research_access.yaml  ringable.yaml  scan_access.yaml  sleepable.yaml  stock_trading.yaml  wakeable.yaml  web_access.yaml
config/tools/code/: focus.yaml
docs/: scenarios-and-paradigms.md
scripts/: current_mud_state.py  dedupe_conversation.py  fix_timestamps.py  gather.py  manage_conversation.py  test_memory_search.py  validate_dialogue.py
src/aim_bot/: __main__.py
src/aim_cli/: __init__.py  __main__.py
src/aim_server/: __main__.py  serverapi.py
src/aim_server/session/: __main__.py  state.py  workflow.py
src/dream_agent/: __init__.py  __main__.py  client.py
src/dream_watcher/: __init__.py  __main__.py
src/dreamer/: __init__.py  __main__.py
src/repo_watcher/: __init__.py  __main__.py  config.py  documents.py  main.py  watcher.py
tests/: conftest.py
tests/andimud_tests/: __init__.py  conftest.py  test_action_consumer.py  test_cmd_last.py  test_code_helper.py  test_code_room.py  test_doorbell.py  test_new_characters.py  test_paper.py  test_room_auras.py  test_status_commands.py  test_terminals.py
tests/integration/dreamer/: test_scenario_flow.py
tests/unit/: __init__.py
tests/unit/api/: __init__.py  conftest.py  test_chat.py  test_conversation.py  test_memory.py  test_report.py
tests/unit/app/: __init__.py
tests/unit/cmd_tests/: test_mud_commands.py
tests/unit/commands/: __init__.py  test_movement.py
tests/unit/conversation/: test_conversation_message.py  (+2 more)
(+85 files in other folders)
