[project]
name = "ai-mind"
version = "0.1.1"
description = "An agentic AI with Active Memory"
authors = [
  {name = "Martin Bukowski", email = "4502632+54rt1n@users.noreply.github.co"}
]
license = {text = "CC-BY-NC-SA-4.0"}
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "aim-core",
    "aim-mud",
    "fastapi",
    "uvicorn",
    "sse-starlette",
    "starlette",
    "python-multipart",
    "click",
    "watchdog",
    "trafilatura",
    "lxml_html_clean",
    "psutil",
    "torchvision",
    "semver",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aim"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:open_text is deprecated.*:DeprecationWarning:wonderwords\\.random_word",
    # If you have other warnings to filter, add them here, e.g.:
    # "ignore::UserWarning:some\\.module\\.path"
]

[tool.uv.workspace]
members = [
    "packages/aim-core",
    "packages/aim-mud",
]

[tool.uv.sources]
aim-core = { workspace = true }
aim-mud = { workspace = true }

[dependency-groups]
test = [
    "pytest-asyncio>=1.3.0",
]
